added link to Giphy App and changed some CSS styling to fix some issues that occured during deployment

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <div class="row">
-        <div class="col-md-12" class="headerCol">
+    <div>
+        <div>
         <header id="masthead">
             <div class="container">
             <a href="index.html" id="logo">Brian Witte</a>
