--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
           <div class="work">
             <img src="assets/images/img2.jpg" alt="RPG Game">
 
-            <h3>RPG Game</h3>
+            <h3><a href="https://brianw0991.github.io/gifTastic/">Giphy App</a></h3>
           </div>
           <div class="work">
             <img src="assets/images/img3.jpg" alt="Trivia Game">
